--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -740,6 +740,10 @@ span.sortlink {
                 object-fit: cover;
                 border-radius: 5px;
                 @include copy-protect;
+
+                @media screen and (min-width: 1025px) {
+                  height: 10.5vw;
+                }
               }
             }
 
