--- a/src/app/parts/memo-dialog/memo-dialog.component.scss
+++ b/src/app/parts/memo-dialog/memo-dialog.component.scss
@@ -1,6 +1,13 @@
 @import "../../../assets/scss/vars";
 ::ng-deep.cdk-global-overlay-wrapper{
   align-items: center!important;
+
+  .cdk-overlay-pane {
+    @media screen and (min-width: 1025px) {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
 
@@ -8,6 +15,9 @@
     border-radius: 10px;
     padding: 30px 26px!important;
     position: relative;
+    @media screen and (min-width: 1025px) {
+      width: 50% !important;
+    }
     .mat-dialog-title{
       font-size: 16px;
       display: inline-flex;
