--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -320,6 +320,10 @@ p{
       height: 66.6vw;
       object-fit: cover;
       @include copy-protect;
+
+      @media screen and (min-width: 1025px) {
+        height: 30vw;
+      }
     }
   }
 
@@ -381,6 +385,10 @@ p{
   width: 100%;
   height: 62.6vw;
   overflow: hidden;
+
+  @media screen and (min-width: 1025px) {
+    height: 30vw;
+  }
 
   img {
     width: 100%;
