--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -16,19 +16,19 @@
   </mat-nav-list> -->
   <div class='row public'>
     <div class='col about'>
-      <a routerLink="about">
+      <a routerLink="offcial/about">
         <img class="icon" src='../../../assets/img/icon_about.svg' alt='about'>
         <div>アバウト</div>
       </a>
     </div>
     <div class='col guide'>
-      <a routerLink="guide">
+      <a routerLink="offcial/guide">
         <img class="icon" src='../../../assets/img/icon_guide.svg' alt='guide'>
         <div>ガイド</div>
       </a>
     </div>
     <div class='col policy'>
-      <a routerLink="privacy">
+      <a routerLink="offcial/privacy">
         <img class="icon" src='../../../assets/img/icon_policy.svg' alt='policy'>
         <div>プライバシー</div>
       </a>
