--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -8,9 +8,9 @@
   (sort)="sortChange($event)"
   (keyword)="keywordSearch($event)"
   (open)="openDialog($event)"
-  (reset)="conditionReset()" *ngIf="isBrowser">
+  (reset)="conditionReset()">
 </app-planspot-selector>
-<app-planspot-list (scrolled)="onScrollDown()" (glink)="onPlanSpotChange($event)" [isList]="isList" [condition]="condition" *ngIf="isBrowser">
+<app-planspot-list (scrolled)="onScrollDown()" (glink)="onPlanSpotChange($event)" [isList]="isList" [condition]="condition">
   <app-planspot-list-item
     *ngFor="let item of details$"
     [item]="item"
