--- a/src/app/layout/root/root.component.html
+++ b/src/app/layout/root/root.component.html
@@ -4,7 +4,7 @@
       <app-nav-menu [currentlang]="currentLang" (sideClose)="onSideNavClose()"></app-nav-menu>
       <img src="../../../assets/img/nav-close.svg" alt="" class="navclose" (click)="onhandleSiteNav(true)" />
     </mat-sidenav>
-    <mat-sidenav #cart position="end" mode="push" [(opened)]="cartopened" [fixedInViewport]="true" class="cartnav">
+    <mat-sidenav #cart position="end" mode="over" [(opened)]="cartopened" [fixedInViewport]="true" class="cartnav">
       <button mat-button class="close-my-plan" (click)="onhandleCartNav(true)">
         <img src="{{backbtn_src}}" alt="close my plan" />
       </button>
